<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.ualberta.cs.patenio_subbook.SubEditMenuActivity">

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="16dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />

    <EditText
        android:id="@+id/nametext"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="92dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/label_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="92dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/label_date"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/monthycharge"
        android:layout_width="92dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/label_monthly_charge"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="115dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/label_comment"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthycharge" />

    <EditText
        android:id="@+id/datetext"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/monthlychargetext"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/monthycharge"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/commenttext"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/comment"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/savemessage"
        android:layout_width="250dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save_message"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/deletelmessage"
        android:layout_width="230dp"
        android:layout_height="58dp"
        android:layout_marginEnd="40dp"
        android:text="@string/delete_message"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
